fix header z-index

--- a/pycon_portugal_2022/static/sass/_header.scss
+++ b/pycon_portugal_2022/static/sass/_header.scss
@@ -5,7 +5,7 @@
 .header {
   position: relative;
   top: 0px;
-  z-index: 1;
+  z-index: auto;
   padding: 1rem;
   background: base.$BgBlue;
   border-bottom: .5rem black solid;
